force-app/main/default/objects/Project__c/fields/Cap_Table_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Cap_Table_Uploaded_Date__c</fullName>
    <description>Cap Table Uploaded Date</description>
    <label>Cap Table Uploaded Date</label>
    <type>Date</type>
</CustomField>