force-app/main/default/objects/Project__c/fields/Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email__c</fullName>
    <description>Formula (Text) showing the email of the Customer Contact</description>
    <formula>Customer_Contact__r.Email</formula>
    <label>Customer Contact Email</label>
    <type>Text</type>
</CustomField>