force-app/main/default/objects/Project__c/fields/IM_Notes__c.field-meta.xml
<CustomField>
    <fullName>IM_Notes__c</fullName>
    <description>Implementation Manager Notes</description>
    <label>IM Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>