force-app/main/default/objects/Project__c/fields/Kick_Off_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Call_Date__c</fullName>
    <description>Kick Off Call Date</description>
    <label>Kick Off Call Date</label>
    <type>Date</type>
</CustomField>