force-app/main/default/objects/Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <formula>BLANKVALUE( Go_Live_Date__c , TODAY() ) -  Kick_Off_Call_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between the Kick Off Call and the Go Live Date (or today, if not live yet)</inlineHelpText>
    <label>Project Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>