force-app/main/default/objects/Project__c/fields/Target_Cap_Table_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Cap_Table_Uploaded_Date__c</fullName>
    <label>Target Cap Table Uploaded Date</label>
    <type>Date</type>
</CustomField>