force-app/main/default/objects/Project__c/fields/Target_Data_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Data_Received_Date__c</fullName>
    <label>Target Data Received Date</label>
    <type>Date</type>
</CustomField>