force-app/main/default/objects/Project__c/fields/Target_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Go_Live_Date__c</fullName>
    <description>Target Go Live Date</description>
    <label>Target Go Live Date</label>
    <type>Date</type>
</CustomField>